versioned_docs/version-5.0/client-api/operations/attachments/delete-attachment.mdx
---
title: "Operations: Attachments: How to Delete an Attachment"
hide_table_of_contents: true
sidebar_label: Delete Attachment
sidebar_position: 2
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Operations: Attachments: How to Delete an Attachment
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


This operation is used to delete an attachment from a document. 

## Syntax

<TabItem value="delete_attachment_syntax" label="delete_attachment_syntax">
<CodeBlock language="csharp">
{`public DeleteAttachmentOperation(string documentId, string name, string changeVector = null)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | string | ID of a document containing an attachment |
| **name** | name | Name of an attachment |
| **changeVector** | string | Entity changeVector, used for concurrency checks (`null` to skip check) |

## Example

<TabItem value="delete_1" label="delete_1">
<CodeBlock language="csharp">
{`store.Operations.Send(new DeleteAttachmentOperation("orders/1-A", "invoice.pdf"));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="java">


This operation is used to delete an attachment from a document. 

## Syntax

<TabItem value="delete_attachment_syntax" label="delete_attachment_syntax">
<CodeBlock language="java">
{`DeleteAttachmentOperation(String documentId, String name)

DeleteAttachmentOperation(String documentId, String name, String changeVector)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **documentId** | String | ID of a document containing an attachment |
| **name** | String | Name of an attachment |
| **changeVector** | String | Entity changeVector, used for concurrency checks (`null` to skip check) |

## Example

<TabItem value="delete_1" label="delete_1">
<CodeBlock language="java">
{`store.operations().send(
    new DeleteAttachmentOperation("orders/1-A", "invoice.pdf"));
`}
</CodeBlock>
</TabItem>


</LanguageContent>

<!---
### Operations
- [What are Operations](../../../client-api/operations/what-are-operations)
- [Put Attachment](../../../client-api/operations/attachments/put-attachment)
- [Get Attachment](../../../client-api/operations/attachments/get-attachment)


-->